--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-image: url('../src/Goose.jpg');
+  background-image: url('./Goose.jpg');
   background-size:cover;
   background-repeat: no-repeat;
 }
